[project]
name = "custom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ninja>=1.13.0",
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "setuptools>=81.0.0",
    "torch",
]



[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"


[tool.uv]
prerelease = "allow"
